r73
- disabled collision + vmap support (causes servercrashes)
------------------------------------------------------------------------------------
r72
- added GlobalNPC Sourcecode
------------------------------------------------------------------------------------
r71
- added Character tables
- added Logon tables
------------------------------------------------------------------------------------
r70
- added Lost DB for ascent
- added converter for arcemu to ascent database
------------------------------------------------------------------------------------
r69
-added global npc
------------------------------------------------------------------------------------
r68
- actuel changelog
------------------------------------------------------------------------------------
r67
- added actuel sun++ revision 323
------------------------------------------------------------------------------------
r66
- added AH BOT
------------------------------------------------------------------------------------
r65
- added mpqe extractor
------------------------------------------------------------------------------------
r64
- Added NPC and Item ID's
------------------------------------------------------------------------------------
r62
- made actuel changelog
------------------------------------------------------------------------------------
r61
- changed npc id's
------------------------------------------------------------------------------------
r60
- changed output directory
------------------------------------------------------------------------------------
r59
- compile fix
------------------------------------------------------------------------------------
r58
- deleted error log
------------------------------------------------------------------------------------
r57
- compile fix for sun++ scripts
------------------------------------------------------------------------------------
r56
- fixed compile error