@@ -43,7 +43,7 @@
 #ifdef ENABLE_COLLISION
 # define COLLISION 1
 #endif
-//#define COLLISION 1
+#define COLLISION 1
 
 /** Use memory mapping for map files for faster access (let OS take care of caching)
  * (currently only available under windows)
