@@ -92,8 +92,8 @@ struct Addr
 #define DEF_VALUE_NOT_SET 0xDEADBEEF
 
 #ifdef WIN32
-        static const char* default_config_file = "configs/ascent-world.conf";
-        static const char* default_realm_config_file = "configs/ascent-realms.conf";
+        static const char* default_config_file = "ascent-world.conf";
+        static const char* default_realm_config_file = "ascent-realms.conf";
 #else
         static const char* default_config_file = CONFDIR "/ascent-world.conf";
         static const char* default_realm_config_file = CONFDIR "/ascent-realms.conf";
