@@ -1,3 +1,6 @@
+r74
+- crashfix for server
+------------------------------------------------------------------------------------
 r73
 - disabled collision + vmap support (causes servercrashes)
 ------------------------------------------------------------------------------------
